--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,10 @@
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
+        "laravel-frontend-presets/tall": "^1.7",
         "laravel/framework": "^7.24",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "livewire/livewire": "^1.3"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
