--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,10 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel-frontend-presets/tall": "^1.7",
         "laravel/framework": "^7.24",
+        "laravel/nova": "*",
         "laravel/tinker": "^2.0",
         "livewire/livewire": "^1.3",
-        "laravel/nova": "*"
+        "silvanite/nova-field-cloudinary": "^1.3"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
